crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__operator__add.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/add.lox
---
success: true
exit_code: 0
----- stdout -----
579
string

----- stderr -----
