crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__operator__divide.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/divide.lox
---
success: true
exit_code: 0
----- stdout -----
4
1

----- stderr -----
