crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__operator__equals.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/equals.lox
---
success: true
exit_code: 0
----- stdout -----
true
true
false
true
false
true
false
false
false
false

----- stderr -----
