crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__operator__equals_method.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/equals_method.lox
---
success: true
exit_code: 0
----- stdout -----
true
true

----- stderr -----
