crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__operator__greater_or_equal_nonnum_num.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/greater_or_equal_nonnum_num.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: type error in binary operator `>=`: lhs has type `String`, but rhs has type `Number`
   ╭─[craftinginterpreters/test/operator/greater_or_equal_nonnum_num.lox:1:1]
   │
 1 │ "1" >= 1; // expect runtime error: Operands must be numbers.
   │ ─┬─ ─┬ ┬  
   │  │   │ ╰── this is of type `Number`
   │  │   │    
   │  │   ╰──── the operator in question
   │  │        
   │  ╰──────── this is of type `String`
   │ 
   │ Help: operator `>=` can only be applied to numbers
───╯
